refactor: cálculo dos intervalos otimizado e testes de integração reforçados